--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 
 
 @font-face {
-    font-family: "Segoe UI";
-    src: url("./assets/fonts/segoeuib.ttf") format("ttf"),
-    url("./assets/fonts/segoeuisl.ttf") format("tff");
+    src: url("assets/fonts/segoeuib.ttf");
+    font-family: Segoe UI;
+    
 }
 
 @font-face {
-    font-family: "Semilight";
-    src: url("./assets/fonts/segoeuisl.ttf") format("tff");
+    src: url("assets/fonts/segoeuisl.ttf");
+    font-family: Segoe UI light;
 }
 
 /* theme input */
 input[type="checkbox"]{
     -webkit-appearance: none;
     visibility: hidden;
-    display: none
+    display: none;
 }
 
 /* theme switch button properties */
@@ -53,9 +53,9 @@ h1 {
 /* a class notes archive */
 #TagLine {
     color: #8664c3;
-    font-family: "Segoe UI", sans-serif;
+    font-family: "Segoe UI light;
     font-size: 50px;
-    font-weight: lighter;
+    /* font-weight: lighter; */
     margin-left: 100px;
     margin-top: 23px;
 }
