--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-/* Declaring and installing fonts */
 @font-face {
     src: url("assets/fonts/segoeuib.ttf");
     font-family: Segoe UI;
@@ -19,7 +17,7 @@ input[type="checkbox"]{
 }
 
 /* theme switch button properties */
-.check {
+.check{
     margin-top: -665px;
     margin-left: 1423px;
     position: relative;
@@ -36,8 +34,8 @@ input[type="checkbox"]{
     height: 6px;
     width: 872px;
     background-color: #8664c3;
-    margin-left: 100px;
-    margin-top: -100;
+    margin-left: 6%;
+    margin-top: 1%;
 }
 
 /* Text: Anavrin */
@@ -46,8 +44,8 @@ h1 {
     font-family: "Segoe UI", sans-serif;
     font-size: 150px;
     margin-left: 100px;
-    margin-bottom: -1px;
-    margin-top: 191px;
+    margin-bottom: 1%;
+    margin-top: 13%;
 }
 
 /* a class notes archive */
@@ -56,8 +54,9 @@ h1 {
     font-family: "Segoe UI light";
     font-size: 50px;
     /* font-weight: lighter; */
-    margin-left: 100px;
-    margin-top: 73px;
+    margin-left: 7%;
+    margin-top: 2%;
+    margin-bottom: 7%;
 }
 
 /* link properties of buttons: About & Team */
@@ -69,19 +68,23 @@ a {
 
 /* Anavrin logo watermark */
 .watermark{
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     opacity: 0.2;
-    margin-left: 1146px;
-    margin-top: -269px;
+    margin-left: 70%;
+    margin-bottom: -42%;
 }
 
 /* text placement of footer elements: About & Team */
 .foot {
-    margin-right: 81px;
     font-size: 40px;
-    margin-left: 64px;
-    margin-top: 100px;
+    margin-right: 1%;
+    margin-left: 6%;
+    margin-top: -11%;
+}
+
+label:hover{
+    color: aliceblue;
 }
 
 /* Dark mode background settings */
@@ -90,9 +93,10 @@ a {
     color: white;
 }
 
-/* back button placement */
-.back{
-    margin-top: 542px;
-    margin-left: 1342px;
-    cursor: auto;
+/* Next arrow button */
+#next {
+    height: 60px;
+    width: 60px;
+    margin-left: 91%;
+    margin-top: 37%;
 }
