--- a/style.css
+++ b/style.css
@@ -3,100 +3,133 @@
     font-family: Segoe UI;
     
 }
-
 @font-face {
     src: url("assets/fonts/segoeuisl.ttf");
     font-family: Segoe UI light;
 }
 
-/* theme input */
-input[type="checkbox"]{
-    -webkit-appearance: none;
-    visibility: hidden;
-    display: none;
+/* Changes: Everything but the ThemeToggler and the Watermark is now contained in this container. */
+#container {
+    position: relative;
+    z-index: 5;
+    padding-top: 10%;
+    padding-left: 2.5%;
+    max-height: 100vh;
+    max-width: 100%;
 }
 
-/* theme switch button properties */
-.check{
-    margin-top: -665px;
-    margin-left: 1423px;
-    position: relative;
+/* Replaced the previous "checkbox" button with an actual button */
+#toggleTheme {
+    position: fixed;
+    z-index: 7;
+    margin-top: 5%;
+    margin-left: 90vw;
     display: block;
-    width: 60px;
-    height: 30px;
-    background: #092c3e;
-    cursor: auto;
+    width: 5vw;
+    height: 3.5vw;
     border-radius: 20px;
+    user-select: none;
+    background: black;
+}
+
+#toggleTheme:focus {
+    outline: none;
 }
 
 /* horizontal line below anavrin */
-.line {
+/* Changes: Using <hr> tag since that is inbuilt and for this very purpose. */
+#line {
     height: 6px;
-    width: 872px;
+    width: 60vw;
     background-color: #8664c3;
-    margin-left: 6%;
-    margin-top: 1%;
+    margin: 1% 0;
+    border: none;
+    border-radius: 5px;
 }
 
 /* Text: Anavrin */
 h1 {
     color: #8664c3;
     font-family: "Segoe UI", sans-serif;
-    font-size: 150px;
-    margin-left: 100px;
-    margin-bottom: 1%;
-    margin-top: 13%;
+    font-size: 12vw;
+    margin: 0;
 }
 
 /* a class notes archive */
-#TagLine {
+#tagline {
     color: #8664c3;
     font-family: "Segoe UI light";
-    font-size: 50px;
-    /* font-weight: lighter; */
-    margin-left: 7%;
+    font-size: 6vw;
     margin-top: 2%;
-    margin-bottom: 7%;
 }
 
 /* link properties of buttons: About & Team */
-a {
+nav a {
     color: #666666;
     font-family: "Segoe UI", sans-serif;
     text-decoration: none;
+    font-size: 3vw;
 }
+nav a:not(:first-child) {
+    margin: 0 5%;
+}
+
 
 /* Anavrin logo watermark */
+/* Changes: margins and size are now responsive. */
 .watermark{
-    width: 300px;
-    height: 300px;
-    opacity: 0.2;
-    margin-left: 70%;
-    margin-bottom: -42%;
-}
-
-/* text placement of footer elements: About & Team */
-.foot {
-    font-size: 40px;
-    margin-right: 1%;
-    margin-left: 6%;
-    margin-top: -11%;
-}
-
-label:hover{
-    color: aliceblue;
+    z-index: 1;
+    position: fixed;
+    max-width: 300px;
+    max-height: 300px;
+    width: 25vw;
+    height: 25vw;
+    opacity: 0.3;
+    margin-left: 70%;   /* Mess around with these values change */
+    margin-top: 25%;    /* the location of the watermark. (Keep in %) */
 }
 
 /* Dark mode background settings */
 .dark-mode{
     background-color: black;
-    color: white;
+}
+
+.dark-mode nav a {
+    color: #989898;
+}
+
+.dark-mode #toggleTheme {
+    background-color: whitesmoke;
 }
 
 /* Next arrow button */
 #next {
-    height: 60px;
-    width: 60px;
-    margin-left: 91%;
-    margin-top: 37%;
+    display: inline-block;
+    position: fixed;
+    z-index: 10;
+    width: 5vw;
+    height: 5vw;
+    max-height: 60px;
+    max-width: 60px;
+    margin-left: 80vw;
+    border-radius: 100px;
+    background-color: rgba(0,0,0,0);
+    background-image: url("./assets/back.png");
+    background-size: cover;
+    font-size: 3vw;
+    text-align: center;
+    font-weight: 100;
+    user-select: none;
+
+}
+
+#next img {
+    width: 5vw;
+    height: 5vw;
+    max-height: 60px;
+    max-width: 60px;
+}
+
+#next:focus {
+    outline: none;
 }
