--- a/style.css
+++ b/style.css
@@ -22,14 +22,16 @@
 #toggleTheme {
     position: fixed;
     z-index: 7;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-left: 90vw;
     display: block;
-    width: 5vw;
-    height: 3.5vw;
+    width: 4.5vw;
+    height: 2.5vw;
     border-radius: 20px;
     user-select: none;
     background: black;
+    border: none;
+
 }
 
 #toggleTheme:focus {
@@ -53,14 +55,16 @@ h1 {
     font-family: "Segoe UI", sans-serif;
     font-size: 12vw;
     margin: 0;
+    /* position: fixed; I added this */
 }
 
 /* a class notes archive */
 #tagline {
     color: #8664c3;
     font-family: "Segoe UI light";
-    font-size: 6vw;
+    font-size: 3vw;
     margin-top: 2%;
+    margin-bottom: 8%;
 }
 
 /* link properties of buttons: About & Team */
@@ -69,9 +73,10 @@ nav a {
     font-family: "Segoe UI", sans-serif;
     text-decoration: none;
     font-size: 3vw;
+
 }
 nav a:not(:first-child) {
-    margin: 0 5%;
+    margin: 0% 5%;
 }
 
 
@@ -86,7 +91,7 @@ nav a:not(:first-child) {
     height: 25vw;
     opacity: 0.3;
     margin-left: 70%;   /* Mess around with these values change */
-    margin-top: 25%;    /* the location of the watermark. (Keep in %) */
+    margin-top: 16%;    /* the location of the watermark. (Keep in %) */
 }
 
 /* Dark mode background settings */
@@ -111,7 +116,7 @@ nav a:not(:first-child) {
     height: 5vw;
     max-height: 60px;
     max-width: 60px;
-    margin-left: 80vw;
+    margin-left: 85vw;
     border-radius: 100px;
     background-color: rgba(0,0,0,0);
     background-image: url("./assets/back.png");
@@ -120,7 +125,7 @@ nav a:not(:first-child) {
     text-align: center;
     font-weight: 100;
     user-select: none;
-
+    border: none;
 }
 
 #next img {
@@ -130,6 +135,21 @@ nav a:not(:first-child) {
     max-width: 60px;
 }
 
+
 #next:focus {
     outline: none;
+}
+
+.aboutAnima {
+    transition: 50px;
+}
+
+/* next arrow button hover effect */
+#next:hover{
+    transform: scale(1.1);;
+}
+
+/* nav element hover color change */
+#hoverFx:hover{
+    color: #8664c3;
 }
